[gd_scene load_steps=12 format=3 uid="uid://cad8ysfv0e7ca"]

[ext_resource type="Script" path="res://Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://jut6ddd6vw5k" path="res://Player.tscn" id="2"]
[ext_resource type="Theme" uid="uid://36qhajq0mv2s" path="res://fonts/new_theme.tres" id="3"]
[ext_resource type="PackedScene" path="res://Enemy.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://btnomrm0yxyln" path="res://bg_back.png" id="5"]
[ext_resource type="Texture2D" uid="uid://d3gk6ithkgc6y" path="res://bg_sky.png" id="6"]

[sub_resource type="Shader" id="1"]
code = "// CanvasItemのシェーダーであることを宣言
shader_type canvas_item;

// UV値のオフセット値
uniform vec2 ofs_uv;

// フラグメントシェーダー
void fragment() {
    // 色を取得
    vec4 color = texture(TEXTURE, vec2(UV.x+TIME*0.1, UV.y));

    // 反映
    COLOR = color;
}"

[sub_resource type="ShaderMaterial" id="2"]
shader = SubResource("1")
shader_parameter/ofs_uv = null

[sub_resource type="Shader" id="3"]
code = "// CanvasItemのシェーダーであることを宣言
shader_type canvas_item;

// UV値のオフセット値
uniform vec2 ofs_uv;

// フラグメントシェーダー
void fragment() {
    // 色を取得
    vec4 color = texture(TEXTURE, vec2(UV.x+TIME*0.05, UV.y));

    // 反映
    COLOR = color;
}"

[sub_resource type="ShaderMaterial" id="4"]
shader = SubResource("3")
shader_parameter/ofs_uv = null

[sub_resource type="Environment" id="5"]
background_mode = 4
background_canvas_max_layer = 3
glow_enabled = true
glow_intensity = 0.11
glow_bloom = 0.1
glow_blend_mode = 0
glow_hdr_threshold = 2.1
glow_hdr_scale = 1.1
glow_hdr_luminance_cap = 3.0

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="BgLayer" type="CanvasLayer" parent="."]
scale = Vector2(1.28, 1.28)
transform = Transform2D(1.28, 0, 0, 1.28, 0, 0)

[node name="BgBack" type="Sprite2D" parent="BgLayer"]
modulate = Color(0.537255, 0.537255, 0.537255, 1)
texture_repeat = 2
material = SubResource("2")
texture = ExtResource("5")
centered = false

[node name="BgSky" type="Sprite2D" parent="BgLayer"]
modulate = Color(0.537255, 0.537255, 0.537255, 1)
texture_repeat = 2
material = SubResource("4")
texture = ExtResource("6")
centered = false

[node name="MainLayer" type="CanvasLayer" parent="."]

[node name="Player" parent="MainLayer" instance=ExtResource("2")]
position = Vector2(808, 520)

[node name="Enemy" parent="MainLayer" instance=ExtResource("4")]
position = Vector2(808, 72)

[node name="ShotLayer" type="CanvasLayer" parent="."]

[node name="ParticleLayer" type="CanvasLayer" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("5")

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="CheckButtonLaser" type="CheckButton" parent="UILayer"]
offset_right = 112.0
offset_bottom = 32.0
theme = ExtResource("3")
text = "レーザー"

[node name="CheckButtonBloom" type="CheckButton" parent="UILayer"]
offset_top = 24.0
offset_right = 96.0
offset_bottom = 56.0
theme = ExtResource("3")
text = "グロー"

[node name="CheckButtonSmoke" type="CheckButton" parent="UILayer"]
offset_top = 48.0
offset_right = 64.0
offset_bottom = 80.0
theme = ExtResource("3")
text = "煙"

[node name="CheckButtonSmokeRand" type="CheckButton" parent="UILayer"]
offset_top = 72.0
offset_right = 96.0
offset_bottom = 104.0
theme = ExtResource("3")
text = "煙移動"

[node name="HSliderMaxShot" type="HSlider" parent="UILayer"]
offset_left = 3.0
offset_top = 106.0
offset_right = 120.0
offset_bottom = 122.0
min_value = 1.0
max_value = 32.0
value = 4.0

[node name="Label" type="Label" parent="UILayer/HSliderMaxShot"]
layout_mode = 0
offset_left = 125.0
offset_top = -2.0
offset_right = 163.0
offset_bottom = 25.0
theme = ExtResource("3")
text = "4/32"

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2(512, 300)
